--- a/admin/index.html
+++ b/admin/index.html
@@ -9,5 +9,10 @@
   <body>
     <!-- Include the script that builds the page and powers Netlify CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+    <script>
+    import CMS from "netlify-cms";
+    import * as ColorWidget from "netlify-cms-widget-color";
+    CMS.registerWidget("color", ColorWidget.Control);
+    </script>
   </body>
 </html>
