--- a/admin/index.html
+++ b/admin/index.html
@@ -11,10 +11,10 @@
     <!-- <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>   -->
     <script src="https://unpkg.com/netlify-cms"></script>
     <script src="https://unpkg.com/netlify-cms-widget-color"></script>
-    <script>
+    <!-- <script>
     import { ColorControl } from 'netlify-cms-widget-color'
 
     CMS.registerWidget('color', ColorControl)
-    </script>
+    </script> -->
   </body>
 </html>
