--- a/admin/index.html
+++ b/admin/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <!-- Include the script that builds the page and powers Netlify CMS -->
-    <!-- <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>   -->
-    <script src="https://unpkg.com/netlify-cms"></script>
-    <script src="https://unpkg.com/netlify-cms-widget-color"></script>
-    <!-- <script>
-    import { ColorControl } from 'netlify-cms-widget-color'
+    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+      
+    <script>
+    import CMS from "netlify-cms";
+    import * as ColorWidget from "netlify-cms-widget-color";
+    CMS.registerWidget("color", ColorWidget.Control);
 
-    CMS.registerWidget('color', ColorControl)
-    </script> -->
+    </script>
   </body>
 </html>
