--- a/admin/index.html
+++ b/admin/index.html
@@ -9,11 +9,12 @@
   <body>
     <!-- Include the script that builds the page and powers Netlify CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-      
+
+    <script src="https://unpkg.com/netlify-cms-widget-youtube@^0.3.0"></script>
+ 
     <script>
-    import CMS from "netlify-cms";
-    import * as ColorWidget from "netlify-cms-widget-color";
-    CMS.registerWidget("color", ColorWidget.Control);
+      CMS.registerWidget('youtube', youtubeControl, youtubePreview)
+    </script> 
 
     </script>
   </body>
