--- a/admin/index.html
+++ b/admin/index.html
@@ -10,11 +10,11 @@
     <!-- Include the script that builds the page and powers Netlify CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
 
-    <script src="https://unpkg.com/netlify-cms-widget-youtube@^0.3.0"></script>
+    <script src="https://unpkg.com/netlify-cms-widget-color@3.0.1/dist/umd/color.min.js"></script>
  
     <script>
-      CMS.registerWidget('youtube', youtubeControl, youtubePreview)
-    </script> 
+  CMS.registerWidget('color', ColorControl)
+  </script> 
 
     </script>
   </body>
