--- a/admin/index.html
+++ b/admin/index.html
@@ -13,5 +13,8 @@
     <script src="https://unpkg.com/netlify-cms-widget-color@3.0.0/dist/umd/color.min.js"></script>
 
     </script>
+    <script>
+      CMS.registerWidget('color', NetlifyCMSWidgetColor.Control)
+    </script>
   </body>
 </html>
