--- a/admin/index.html
+++ b/admin/index.html
@@ -11,6 +11,7 @@
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
 
     <script src="https://unpkg.com/netlify-cms-widget-color@3.0.0/dist/umd/color.min.js"></script>
+    <script src="https://unpkg.com/react-color@2.17.3/lib/index.js"></script>
 
     </script>
     <script>
